--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
+        fetch-depth: 0
         java-version: '11'
         distribution: 'temurin'
 
